--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="https://www.hindustantimes.com/rf/image_size_1200x900/HT/p2/2020/04/17/Pictures/iconic-pillars-installed-iit-the-entrance-ropar_125b41aa-8099-11ea-a716-f322ae116ff6.jpg" width = "85%", alt = "Welcome!">
     <hr>
     <h1>Harsh Mittal</h1>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqASnuhSQfRmigNy2vc1oYVEn3J5GQjV43t2zREXLD5AQ6B2UkJQ&s">
+    <img src="image/hmittal.jpeg">
     <h3>Indian Institute of Technology Ropar</h3>
     <hr>
     <h2> About Me</h2>
