--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <body>
-    <img src="https://www.hindustantimes.com/rf/image_size_1200x900/HT/p2/2020/04/17/Pictures/iconic-pillars-installed-iit-the-entrance-ropar_125b41aa-8099-11ea-a716-f322ae116ff6.jpg" width = "85%", alt = "Welcome!">
+    <img src="images/iitroparimage.png" width = "85%", alt = "Welcome!">
     <hr>
     <h1>Harsh Mittal</h1>
     <img src="images/hmittal.jpeg",alt=" ">
@@ -27,7 +27,7 @@
     <hr>
     <h3><a href="https://in.linkedin.com/in/harsh-mittal-iitrpr">Linkedin</a>&nbsp; &nbsp; &nbsp; |  &nbsp; &nbsp; &nbsp;
         <a href="https://github.com/messi10goat/">GitHub</a>&nbsp; &nbsp; &nbsp; | &nbsp; &nbsp; &nbsp;
-        <a href="https://bit.ly/2SVTsF2">Resume</a>
+        <a href="Harsh_CV.pdf">Resume</a>
     </h3>
     <h3> Email : <a href="mailto:2018eeb1150@iitrpr.ac.in">2018eeb1150@iitrpr.ac.in</a> </h3>
   </body>
