--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <hr>
     <h1>Harsh Mittal</h1>
     <img src="images/hmittal.jpeg",alt=" ">
-    <h3>Indian Institute of Technology Ropar</h3>
+    <h3>Indian Institute of Technology Ropar (IITRPR)</h3>
     <hr>
     <h2> About Me</h2>
     <p>I am a sophomore at Indian Institute of Technology, currently pursuing my bachelors in Electrical and Electronics Engineering.</p>
