--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h3>Indian Institute of Technology Ropar</h3>
     <hr>
     <h2> About Me</h2>
-    <p>I am a sophomore at Indian Institute of Technology, currently pursuing my bachelors in Electrical and Electronics Engineering.</p>
+    <p>I am a sophomore at Indian Institute of Technology Ropar, pursuing my bachelors in Electrical and Electronics Engineering.</p>
     <p>I have interest in the fields of Machine Learning, Data Analytics, Data Structures, Algorithms and Finance.</p>
     <hr>
     <h3><a href="https://in.linkedin.com/in/harsh-mittal-iitrpr">Linkedin</a>&nbsp; &nbsp; &nbsp; |  &nbsp; &nbsp; &nbsp;
