--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="name" content="Harsh Mittal IIT Ropar Portal">
   </header>
 
-  <body>
+  <body style="margin: 0;">
   	<div class="welcome">
   		
   		
