--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
             <table style="width: 80%; text-align: right;">
               <tr style="text-align: right; margin: 10px;">
-                <th style="text-align: right; margin: 12px;"><a href="https://in.linkedin.com/in/harsh-mittal-iitrpr"><i class="fa fa-linkedin-square" style="font-size:58px;color:blue"></i></a></th>
-                <th style="text-align: right; margin: 12px;"><a href="https://github.com/messi10goat/"><i class="fa fa-github" style="font-size:58px;color:blue"></i></a></th>
-                <th style="text-align: right; margin: 12px;"><a href="mailto:2018eeb1150@iitrpr.ac.in"><i class="fa fa-envelope" style="font-size:58px;color:blue"></i></a></th>
-                <th style="text-align: right; margin-left: 22px; padding-left: 12px;"><a href="Harsh_CV.pdf"><i class="fa fa-file" style="font-size:50px;color:blue"></i></a></th>
+                <th style="text-align: right; margin: 12px;"><a href="https://in.linkedin.com/in/harsh-mittal-iitrpr" target="_blank"><i class="fa fa-linkedin-square" style="font-size:58px;color:blue"></i></a></th>
+                <th style="text-align: right; margin: 12px;"><a href="https://github.com/messi10goat/" target="_blank"><i class="fa fa-github" style="font-size:58px;color:blue"></i></a></th>
+                <th style="text-align: right; margin: 12px;"><a href="mailto:2018eeb1150@iitrpr.ac.in" target="_blank"><i class="fa fa-envelope" style="font-size:58px;color:blue"></i></a></th>
+                <th style="text-align: right; margin-left: 22px; padding-left: 12px;"><a href="Harsh_CV.pdf" target="_blank"><i class="fa fa-file" style="font-size:50px;color:blue"></i></a></th>
                 
               </tr>
               
