--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<p class="mb-0 editContent">I am a final year student at the Indian Institute of Technology Ropar with a major in Electrical Engineering.</p>
 					<p>My interests include Data Structures, Algorithms, Software Development, Database Systems, Machine Learning and Finance. I love solving real-life problems using the power of computers and mathematics. </p>
 					<p>I am rated as a Candidate Master on Codeforces and 4 star on Codechef. I have worked as a Research Intern at IIT Ropar and a Software Development Engineering Intern at Ketto Online Ventures. Presently, I am working as a Summer Analyst with the Goldman Sachs.</p>
-          <p>I am also serving as the Head Placement Coordinator for CDCRC IIT Ropar. Earlier, I also served as the Vice President for the Enactus IIT Ropar. </p>
+          <p>I am also serving as the Head Placement Coordinator for CDCRC IIT Ropar. Earlier, I served as the Vice President for the Enactus IIT Ropar. </p>
           <br>
           <center>
           <span style="outline-color: initial; outline-width: initial; cursor: inherit;"><a href="Harsh_CV.pdf"><h4>My Resume</h4></a></span>
