--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="bundles/images/hmittal.jpeg" alt="about image" class="img-fluid">
                 
                 <h3 class="banner-text mt-5 editContent">Hi, I am Harsh Mittal</h3>
-                  <p class="my-4 mb-5 editContent">Senior Undergraduate at Indian Institute of Technology Ropar</p><br>
+                  <p class="my-4 mb-5 editContent">Senior Undergraduate at the Indian Institute of Technology Ropar</p><br>
                
               </div>
             </div>
