--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="bundles/images/hmittal.jpeg" alt="about image" class="img-fluid">
                 
                 <h3 class="banner-text mt-5 editContent">Hi, I am Harsh Mittal</h3>
-                  <p class="my-4 mb-5 editContent">Senior Undergraduate at the Indian Institute of Technology Ropar</p><br>
+                  <p class="my-4 mb-5 editContent">a Senior Undergraduate at the Indian Institute of Technology Ropar</p><br>
                
               </div>
             </div>
@@ -51,7 +51,7 @@
           <br>
 					<p class="mb-0 editContent">I am a final year student at the Indian Institute of Technology Ropar with a major in Electrical Engineering.</p>
 					<p>My interests include Data Structures, Algorithms, Software Development, Database Systems, Machine Learning and Finance. I love solving real-life problems using the power of computers and mathematics. </p>
-					<p>I am rated as a Candidate Master on Codeforces and 4 star on Codechef. I have worked as a Research Intern at IIT Ropar and a Software Development Engineering Intern at Ketto Online Ventures. Presently, I am working as a Summer Analyst with the Goldman Sachs.</p>
+					<p>I am an ICPC Regionalist, rated as a Candidate Master on Codeforces and 5 star on Codechef. I have worked as a Research Intern at IIT Ropar and a Software Development Engineering Intern at Ketto Online Ventures. Presently, I am working as a Summer Analyst with the Goldman Sachs.</p>
           <p>I am also serving as the Head Placement Coordinator for CDCRC IIT Ropar. Earlier, I served as the Vice President for the Enactus IIT Ropar. </p>
           <br>
           <center>
